# tensor_frames

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
examples/: method_example.ipynb
tensor_frames/lframes/: __init__.py  classical_lframes.py  gram_schmidt.py  learning_lframes.py  lframes.py  updating_lframes.py
tensor_frames/nn/: edge_conv.py  gcn_conv.py  locaformer.py  local_global.py  mlp.py  tfmessage_passing.py
tensor_frames/nn/embedding/: angular.py  axial.py  radial.py
tensor_frames/nn/pointnet/: __init__.py  dgcnn_blocks.py  pointnet.py  pointnet_blocks.py
tensor_frames/reps/: __init__.py  irreps.py  mlpreps.py  reps.py  tensorreps.py  utils.py
tensor_frames/utils/: __init__.py  point_sampling.py  quaternions.py  wigner.py
tensorframes/lframes/: __init__.py  __init__py  classical_lframes.py  gram_schmidt.py  learn_lframes.py  learning_lframes.py  lframes.py  shift_lframes.py  update_lframes.py  updating_lframes.py
tensorframes/nn/: activations.py  edge_conv.py  envelope.py  gcn_conv.py  linear.py  local_global.py  mlp.py  mlp_conv.py  pooling.py  tensorformer.py  tensormace.py  tensormace_attention.py  tfmessage_passing.py  vector_neuron.py
tensorframes/nn/embedding/: angular.py  axial.py  radial.py
tensorframes/nn/pointnet/: __init__.py  dgcnn_blocks.py  pointnet.py  pointnet_blocks.py
tensorframes/notebooks/: nans_backward.ipynb  radial_embeddings.ipynb
tensorframes/reps/: __init__.py  blockreps.py  irreps.py  maskreps.py  mlpreps.py  reps.py  shiftreps.py  tensorreps.py  transform_coeffs.py  utils.py
tensorframes/utils/: __init__.py  point_sampling.py  quaternions.py  utils.py  wigner.py
tests/: conftest.py  test_gcn_conv.py  test_methods.py  test_mlp_conv.py
tests/lframes/: test_gram_schmidt.py  test_learning_lframes.py  test_lframes.py  test_pca_lframes.py
tests/nn/: test_edge_conv.py  test_locaformer.py  test_local_global.py  test_mlp_conv.py  test_tensorformer.py  test_tensormace.py
tests/nn/embedding/: test_angular.py  test_axial.py  test_radial.py
tests/reps/: test_irreps.py  test_shiftreps.py  test_tensorreps.py
tests/utils/: test_wigner.py
