[project]
name = 'tensor_frames'
requires-python = ">=3.11"
version = "1.0.0"
authors = [
  {name = "Gerrit Gerhartz", email = "gerhartz@thphys.uni-heidelberg.de"},
  {name = "Peter Lippmann", email = "peter.lippmann@iwr.uni-heidelberg.de"},
]

[tool.setuptools.package-data]
"tensor_frames.utils" = ["Jd.pt"]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
